add lot of vocabulary description statements

--- a/.project
+++ b/.project
@@ -6,6 +6,7 @@
 		<project>xturtle.core</project>
 		<project>xturtle.dc</project>
 		<project>xturtle.prov</project>
+		<project>xturtle.voidvann</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
