ignore .all.ttl

--- a/.project
+++ b/.project
@@ -19,4 +19,15 @@
 	<natures>
 		<nature>org.eclipse.xtext.ui.shared.xtextNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1444029643067</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-.all.ttl</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
