--- a/.project
+++ b/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>xturtle.core</project>
 		<project>xturtle.dc</project>
+		<project>xturtle.doap</project>
 		<project>xturtle.foaf</project>
 		<project>xturtle.prov</project>
 		<project>xturtle.voidvann</project>
