--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
-.manual.ttl
 .all.ttl
+.instances.ttl
+.manual.ttl
+.schema.ttl
+*.log
+yasgui-queries
+tests
 log
 results
-tests
+riot.log
+pellet.log
+widoco/
+owl2vowl_logs/
